# thinkpal

./: .gitignore  README.md
server/: .env.example  pyproject.toml  test.db
server/app/: __init__.py  main.py  root_agent.py
server/app/agent/: agent.py  code_agent.py  knowledge_agent.py  llm_call.py  manager.py  orchestator_tutor_agent.py  prompt.py  quiz_agent.py  roadmap_agent.py  visual_learning_agent.py
server/app/agent/prompts/: code_agent_prompt.py  knowledge_agent_prompt.py  orchestrator_agent_prompt.py  orchestrator_prompt.py  quiz_agent_prompt.py  resume_analysis_agent_prompt.py  roadmap_agent_prompt.py  visual_agent_prompt.py  welcome_prompt.py
server/app/agent/tools/: input_formatting_tool.py  knowledge_agent_tools.py  visual_tool.py  (+2 more)
server/app/agent_genai/: code_agent.py  quiz_agent.py  visual_learning_agent.py
server/app/config/: db_config.py  logger.py  openapi_config.py  security_config.py
server/app/core/: agent.py  agent_open_router.py
server/app/db/: chat.py
server/app/models/: __init__.py  chat.py  chat_model.py  user_model.py
server/app/routes/: auth_routes.py  chat.py  chat_routes.py  document_routes.py  user_routes.py
server/app/schemas/: __init__.py  auth_schema.py  chat.py  chat_schema.py  resume_analysis_schema.py  ui.py  ui_schema.py  user_schema.py
server/app/services/: auth_service.py  chat.py  chat_service.py  document_service.py  knowledge_base.py  knowledge_base_service.py  prompt.py
server/app/utils/: chat_serializer.py  history_cleaner.py  json_cleaner.py  ui_component_preparer.py
server/tests/app/: conftest.py
(+59 files in other folders)
